# codeRoom

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TASKS.md  clippy.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  integration.yml  release.yml
data/: splash_content.toml
docs/: DEVELOPMENT.md  architecture.md  colors.md  core-philosophy.md  proposed-amendments.md  skill-role-integration.md  spike-2026-05-09.md  v0.2-trust-and-interrupt.md  v0.4-calm-cli-ui.md
npm/: README.md  install.js  package.json
scripts/: render-readme-images.py
spike/: L1-permission-deny.sh  L2-stream-injection.sh  L3-codex-mcp.sh  README.md
src/: bus.rs  config.rs  config_cmd.rs  config_layered.rs  cost.rs  crep.rs  detect.rs  doctor.rs  image_paths.rs  init.rs  lib.rs  main.rs  output.rs  peer_quote.rs  pointers.rs  priors.rs  prompt_cmd.rs  repl.rs  role.rs  turn.rs  update.rs  work.rs
src/adapter/: cc.rs  codex.rs  gemini.rs  mod.rs
src/adapter/cc/: tests.rs
src/config_layered/: tests.rs
src/init/: tests.rs  write.rs
src/init_defaults/: config.toml  gitignore  host.md  role_template.md  shared.md
src/output/: palette.rs  work_card.rs
src/permissions/: bridge.rs  mod.rs
src/priors/: tests.rs
src/repl/: command.rs  input.rs  markdown.rs  permission_prompt.rs  render.rs  sessions.rs  show.rs  splash.rs  status.rs  tests.rs  turn.rs  work.rs
tests/: cc_adapter_smoke.rs  codex_adapter_smoke.rs  gemini_adapter_smoke.rs
tests/fixtures/: dogfood_orchestration.txt
